--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,174 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #dfdcdc;
+  --lighttext: #af8e4b;
+  --darktext: #69311f;
+  --medtext: #765613;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  color: var(--foreground);
+  color: var(--darktext);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: delius;
+  margin: 0;
+  padding: 0;
+}
+
+/* VIEW CARD */
+.card {
+  width: 30vw;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.5s ease;
+  background: rgba(249, 248, 247, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+@media (max-width: 768px) {
+  .card {
+    width: 40vw;
+    height: 20vh;
+  }
+}
+.card p {
+  color: white;
+  position: relative;
+  z-index: 2;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -20%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(0deg, transparent, transparent 30%, white);
+  transform: rotate(-45deg);
+  transition: all 0.5s ease;
+  opacity: 0;
+}
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px white;
+}
+.card:hover::before {
+  opacity: 1;
+  transform: rotate(-45deg) translateY(100%);
+}
+
+/* TOP DIVIDER */
+.custom-shape-divider-top-1739570364 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  margin-top: -5px;
+}
+
+.custom-shape-divider-top-1739570364 svg {
+  position: relative;
+  display: block;
+  width: calc(118% + 1.3px);
+  height: 100px;
+}
+
+.custom-shape-divider-top-1739570364 .shape-fill {
+  fill: #dfdcdc;
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+  .custom-shape-divider-top-1739570364 svg {
+    width: calc(156% + 1.3px);
+    height: 59px;
+  }
+}
+
+/* MENU */
+.menu-category {
+  width: 300px;
+  height: 200px;
+  border: 2px solid;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+}
+.menu-category::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  transition: opacity 0.5s ease-in-out;
+}
+.menu-category:hover::before {
+  background: rgba(0, 0, 0, 0.5);
+}
+.menu-category p {
+  width: 100%;
+  height: auto;
+  color: white;
+  display: flex;
+  justify-content: center;
+  backdrop-filter: blur(15px);
+}
+
+.menu-nav {
+  color: var(--darktext);
+  background-color: white;
+  border: 1px solid var(--darktext);
+  border-radius: 12px;
+  padding: 5px;
+  cursor: pointer;
+}
+/* BOTTOM DIVIDER */
+.custom-shape-divider-bottom-1739479905 {
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+  bottom: 0;
+}
+
+.custom-shape-divider-bottom-1739479905 svg {
+  position: relative;
+  display: block;
+  width: calc(130% + 1.3px);
+  height: 97px;
+}
+
+.custom-shape-divider-bottom-1739479905 .shape-fill {
+  fill: #af8e4b;
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+  .custom-shape-divider-bottom-1739479905 svg {
+    width: calc(144% + 1.3px);
+    height: 60px;
+  }
 }
