--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@ body {
   font-family: delius;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 /* VIEW CARD */
@@ -31,6 +32,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   position: relative;
   overflow: hidden;
   transition: all 0.5s ease;
@@ -51,6 +53,7 @@ body {
   color: white;
   position: relative;
   z-index: 2;
+  text-wrap: wrap;
 }
 .card::before {
   content: "";
@@ -103,6 +106,39 @@ body {
   }
 }
 
+/* BOOKING BUTTON */
+.booking-btn {
+  background-color: rgb(207, 8, 8);
+  color: white;
+  padding: 12px;
+  margin-top: 20px;
+  border-radius: 12px;
+  animation: jump-shaking 0.83s infinite;
+}
+@keyframes jump-shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateY(-9px);
+  }
+  35% {
+    transform: translateY(-9px) rotate(17deg);
+  }
+  55% {
+    transform: translateY(-9px) rotate(-17deg);
+  }
+  65% {
+    transform: translateY(-9px) rotate(17deg);
+  }
+  75% {
+    transform: translateY(-9px) rotate(-17deg);
+  }
+  100% {
+    transform: translateY(0) rotate(0);
+  }
+}
+
 /* MENU */
 .menu-category {
   width: 300px;
@@ -138,14 +174,6 @@ body {
   backdrop-filter: blur(15px);
 }
 
-.menu-nav {
-  color: var(--darktext);
-  background-color: white;
-  border: 1px solid var(--darktext);
-  border-radius: 12px;
-  padding: 5px;
-  cursor: pointer;
-}
 /* BOTTOM DIVIDER */
 .custom-shape-divider-bottom-1739479905 {
   position: absolute;
